--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,6 @@
 
 @layer utilities {
   .card-transparent {
-    background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1124&q=100');
     background-position: center;
     display: grid;
     place-items: center;
@@ -61,7 +60,7 @@
   }
 
   .btn-custom-primary {
-    @apply px-4 bg-sky-500 text-white py-2 rounded shadow focus:shadow-md focus:outline-none transition-all duration-200 hover:scale-105 hover:bg-sky-700
+    @apply px-4 bg-san-marino-700 text-white py-2 rounded shadow focus:shadow-md focus:outline-none transition-all duration-200 hover:scale-105 hover:bg-sky-700
   }
 
   .btn-custom-danger {
