--- a/src/app/maps/components/side-menu/side-menu.component.html
+++ b/src/app/maps/components/side-menu/side-menu.component.html
@@ -1,8 +1,8 @@
-<ul class="list-none mt-10 border p-3 rounded shadow-lg">
+<ul class="list-none mt-10 border p-3 bg-transparent/60 text-san-marino-200 rounded">
   <li
     *ngFor="let item of menuItems"
     [routerLink]="[ item.router ]"
-    class="cursor-pointer transition-all duration-200 hover:rounded-md rounded-md text-center my-1 p-1 hover:bg-san-marino-300 dark:hover:bg-lima-300 underline underline-offset-4 decoration-san-marino-700 hover:no-underline"
+    class="cursor-pointer transition-all duration-200 hover:rounded-md rounded-md text-center my-1 p-1 hover:bg-san-marino-500 dark:hover:bg-lima-300 underline underline-offset-4 decoration-san-marino-200 hover:no-underline"
     routerLinkActive="bg-san-marino-500 dark:bg-lima-500 no-underline"
   >
     {{ item.name }}
