--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -1,1 +1,29 @@
-<p>properties-page works!</p>
+<section class="w-full h-auto">
+  <div class="w-10/12 mt-10 float-right border-b-2 py-3">
+    <h3 class="text-3xl text-san-marino-500 font-bold">Property Listing</h3>
+  </div>
+
+  <!-- LIST MAPS -->
+  <div class="w-10/12 float-right border-b-2 p-5 mt-4 grid grid-cols-1 md:grid-cols-3 gap-2">
+      <div
+        *ngFor="let house of houses"
+        class="block rounded-lg group  bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700"
+      >
+        <div class="relative overflow-hidden bg-cover bg-no-repeat transition-all duration-300 ease-in-out group-hover:opacity-60 cursor-pointer">
+          <map-mini-map [lngLat]="house.lngLat" />
+        </div>
+        <div class="p-6">
+          <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+            {{ house.title }}
+          </h5>
+          <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+            {{ house.description }}
+          </p>
+        </div>
+      </div>
+  </div>
+</section>
+
+
+
+
