Side menu as stand alone component

--- a/src/app/alone/components/counter-alone/counter-alone.component.html
+++ b/src/app/alone/components/counter-alone/counter-alone.component.html
@@ -1,6 +1,6 @@
 <h2 class="text-xl text-blue-400 my-6"> Counter {{ counter }}</h2>
 <button
-  class="btn-custom-module"
+  class="btn-custom-primary"
   (click)="counter = counter + 1"
 >
   + 1
