--- a/src/app/alone/pages/alone-page/alone-page.component.html
+++ b/src/app/alone/pages/alone-page/alone-page.component.html
@@ -1,4 +1,4 @@
-
+<side-menu class="side-menu"/>
 <section class="w-full h-auto">
   <div class="w-10/12 mt-10 float-right border-b-2 py-3">
     <h3 class="text-5xl text-san-marino-500 font-bold">Standalone Component - Page</h3>
