--- a/src/styles.scss
+++ b/src/styles.scss
@@ -272,3 +272,13 @@
   animation-fill-mode: both;
 
 }
+
+
+// General side menu
+.side-menu {
+  position: fixed;
+  top: 1.2rem;
+  left: 1.2rem;
+  z-index: 999;
+  width: 12rem;
+}
